--- a/SegurosChile-master/ChileRegional/ChileRegional-war/nbproject/private/private.properties
+++ b/SegurosChile-master/ChileRegional/ChileRegional-war/nbproject/private/private.properties
@@ -1,10 +1,10 @@
-deploy.ant.properties.file=C:\\Users\\Pelao\\AppData\\Roaming\\NetBeans\\8.1\\config\\GlassFishEE6\\Properties\\gfv3-1323321865.properties
-file.reference.javaee-web-api-6.0.jar=C:\\Users\\Pelao\\Documents\\NetBeansProjects\\SegurosChile-master\\ChileRegional\\javaee-web-api-6.0.jar
-file.reference.mail.jar=C:\\Users\\Pelao\\Documents\\NetBeansProjects\\SegurosChile-master\\ChileRegional\\mail.jar
+deploy.ant.properties.file=C:\\Users\\Sebastian\\AppData\\Roaming\\NetBeans\\8.1\\config\\GlassFishEE6\\Properties\\gfv3-2026175829.properties
+file.reference.javaee-web-api-6.0.jar=C:\\Users\\Sebastian\\Documents\\GitHub\\Ing-rectm\\SegurosChile-master\\ChileRegional\\javaee-web-api-6.0.jar
+file.reference.mail.jar=C:\\Users\\Sebastian\\Documents\\GitHub\\Ing-rectm\\SegurosChile-master\\ChileRegional\\mail.jar
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/Pelao/GlassFish 4.1/glassfish/domains/domain1
-j2ee.server.home=C:/Users/Pelao/GlassFish 4.1/glassfish
-j2ee.server.instance=[C:\\Users\\Pelao\\GlassFish 4.1\\glassfish;C:\\Users\\Pelao\\GlassFish 4.1\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=C:/Users/Pelao/GlassFish 4.1
+j2ee.server.domain=C:/Users/Sebastian/GlassFish_Server/glassfish/domains/domain1
+j2ee.server.home=C:/Users/Sebastian/GlassFish_Server/glassfish
+j2ee.server.instance=[C:\\Users\\Sebastian\\GlassFish_Server\\glassfish;C:\\Users\\Sebastian\\GlassFish_Server\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/Users/Sebastian/GlassFish_Server
 selected.browser=Chrome.INTEGRATED
-user.properties.file=C:\\Users\\Pelao\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+user.properties.file=C:\\Users\\Sebastian\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
